# numposter

./: .gitattributes  .gitignore  .mergify.yml  README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: __init__.py  core.py  generate_poster.py
src/posters/: __init__.py  alternating_sum_11.py  base.py  collatz.py  digit_sum_9.py  pi_digits.py  primes.py
